# osm-forge

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
docs/api/: client.md  download.md
osmforge/: __init__.py  api.py  cli.py  client.py  config.py  db.py  docker-compose.yaml  download.py  downloader.py  parser.py
osmforge/data/: isle-of-wight.osm.pbf
osmforge/db/: layers.sql
osmforge/db/init/: 01_extentions.sql  02_schemas.sql
osmforge/fastapi/app/: main.py
osmforge/osm2pgsql/: osm.lua
tests/: test_smoke.py
