[tool.poetry]
name = "osmforge"
version = "1.1.1"
description = "Self-hosted OpenStreetMap stack and Python client for spatial analysis"
authors = ["Tom Freeman <tomrfreeman3@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Tom3man/osm-forge"
repository = "https://github.com/Tom3man/osm-forge"
documentation = "https://tom3man.github.io/osm-forge/"
keywords = ["osm", "openstreetmap", "gis", "geospatial", "postgis", "propagation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

# Only ship the client-side modules; the server stack lives in the repo only.
packages = [{include = "osmforge"}]
exclude = [
    "osmforge/db",
    "osmforge/fastapi",
    "osmforge/osm2pgsql",
    "osmforge/data",
]


[tool.poetry.dependencies]
# Runtime — installed when users `pip install osmforge`
python     = "^3.12"
requests   = "^2.32.5"
geopandas  = "^1.1.1"
shapely    = "^2.1.2"
platformdirs = "^4.0"


[tool.poetry.group.dev.dependencies]
# Server stack + notebook tooling — not published to PyPI
fastapi    = "^0.121.0"
uvicorn    = "^0.38.0"
psycopg    = {extras = ["binary"], version = "^3.0"}
click      = "^8.3.0"
ipykernel  = "^7.2.0"
matplotlib = "^3.10.8"
# Quality tooling
ruff       = "^0.9"
mypy       = "^1.11"
pytest     = "^8.0"


[tool.poetry.group.docs.dependencies]
mkdocs             = "^1.6"
mkdocs-material    = "^9.5"
mkdocstrings       = {extras = ["python"], version = "^0.27"}


[tool.poetry.scripts]
osmforge-download = "osmforge.download:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
